feat：字典 & 操作日志完结